--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "eslint": "^3.11.1",
         "eslint-config-airbnb": "^13.0.0",
         "file-loader": "^2.0.0",
+        "html-loader": "^0.5.5",
         "imagemin-webpack-plugin": "^2.3.0",
         "lodash": "^4.17.11",
         "mini-css-extract-plugin": "^0.4.4",
